--- a/frontEnd/src/domain/beer/beers.html
+++ b/frontEnd/src/domain/beer/beers.html
@@ -3,16 +3,26 @@
 <table ng-controller="BeersController" class="table table-striped table-hover" >
   <thead>
     <tr>
-      <th>#</th>
-      <th>Name</th>
-      <th>Brewery</th>
+      <th class="col-md-1">Id</th>
+      <th class="col-md-4">Name</th>
+      <th class="col-md-5">Brewery</th>
+      <th class="col-md-2"></th>
     </tr>
   </thead>
   <tbody>
     <tr ng-repeat="beer in beers">
-      <td>1</td>
+      <td>{{ beer.id }}</td>
       <td>{{ beer.name }}</td>
       <td>{{ beer.brewery }}</td>
+      <td>
+        <a class="btn btn-info" href="#">
+          <i class="glyphicon glyphicon-pencil"></i>
+        </a>
+        
+        <a ng-click="removeBeer(beer.id)" id="btnRemoveBeer" class="btn btn-warning" href="#">
+          <i class="glyphicon glyphicon-minus"></i>
+        </a>        
+      </td>      
     </tr>                 
   </tbody>
 </table>
