Removed the hash from the url

--- a/frontEnd/Index.html
+++ b/frontEnd/Index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Beer App</title>
 
+    <base href="/">
     <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
 </head>
 <body>
