--- a/frontEnd/Index.html
+++ b/frontEnd/Index.html
@@ -1,12 +1,14 @@
 <!doctype html>
-<html ng-app="beerApp">
+<html ng-app="lateRooms">
 <head>
-    <title>Beer App</title>
+    <title>LateRooms.com</title>
 
     <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
 </head>
 <body>
 	<div class="container"> 
+        <h1>LateRooms.com</h1>
+        <br>
 		<div ng-view></div>
 	</div>
     
@@ -15,7 +17,8 @@
 
     <script src="src/app.js"></script>
     <script src="src/domain/domain.js"></script>
-    <script src="src/domain/beer/beersController.js"></script>    
-    <script src="src/domain/beer/beerService.js"></script>    
+    <script src="src/domain/room/roomsController.js"></script>     
+    <script src="src/domain/room/roomController.js"></script>    
+    <script src="src/domain/room/roomService.js"></script>    
 </body>
 </html>
