Introduced Express to serve static content

--- a/frontEnd/public/index.html
+++ b/frontEnd/public/index.html
@@ -14,9 +14,9 @@
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
 
-    <script src="src/app.js"></script>
-    <script src="src/domain/domain.js"></script>
-    <script src="src/domain/beer/beersController.js"></script>    
-    <script src="src/domain/beer/beerService.js"></script>    
+    <script src="app.js"></script>
+    <script src="domain/domain.js"></script>
+    <script src="domain/beer/beersController.js"></script>
+    <script src="domain/beer/beerService.js"></script>
 </body>
 </html>
