--- a/frontEnd/Index.html
+++ b/frontEnd/Index.html
@@ -3,7 +3,6 @@
 <head>
     <title>LateRooms.com</title>
 
-    <base href="/">
     <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
 </head>
 <body>
@@ -16,10 +15,10 @@
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
 
-    <script src="src/app.js"></script>
-    <script src="src/domain/domain.js"></script>
-    <script src="src/domain/room/roomsController.js"></script>     
-    <script src="src/domain/room/roomController.js"></script>    
-    <script src="src/domain/room/roomService.js"></script>    
+    <script src="app/app.js"></script>
+    <script src="app/domain/domain.js"></script>
+    <script src="app/domain/room/roomsController.js"></script>     
+    <script src="app/domain/room/roomController.js"></script>    
+    <script src="app/domain/room/roomService.js"></script>    
 </body>
 </html>
