Adding the landing page behavior.

--- a/frontEnd/Index.html
+++ b/frontEnd/Index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
 	<div class="container"> 
-        <h1>LateRooms.com</h1>
+        <h1>Late Rooms Extranet Navigation</h1>
+        <b>RATES & AVAILABILITY</b>        
         <br>
 		<div ng-view></div>
 	</div>
