Changing the layout of the landing page

--- a/frontEnd/public/index.html
+++ b/frontEnd/public/index.html
@@ -4,12 +4,17 @@
     <title>LateRooms.com</title>
 
     <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
+    <link href="assets/styles/lateRooms.css" rel="stylesheet">
 </head>
 	<body>
 		<div class="container"> 
-	        <h1>Late Rooms Extranet Navigation</h1>
-	        <b>RATES & AVAILABILITY</b>        
+			<div class="text-center">
+		        <h1 >Late Rooms Extranet Navigation</h1>
+		        <b>RATES & AVAILABILITY</b>  
+	        </div>   
+
 	        <br>
+			
 			<div ng-view></div>
 		</div>
 
