Adding the behaviours from the landing page

--- a/frontEnd/public/index.html
+++ b/frontEnd/public/index.html
@@ -23,6 +23,7 @@
 
 		<script src="app.js"></script>
 		<script src="domain/domain.js"></script>
+		<script src="domain/landingPage/landingPageController.js"></script>
 		<script src="domain/room/roomsController.js"></script>
 		<script src="domain/room/roomController.js"></script>
 		<script src="domain/room/roomService.js"></script>
