--- a/frontEnd/public/domain/landingPage/landingPage.html
+++ b/frontEnd/public/domain/landingPage/landingPage.html
@@ -1,38 +1,42 @@
 <div class="row">
-  <div class="col-md-3">
-    <div class="thumbnail noBorder">
+  <div class="col-md-3 vcenter pointer">
+    <div ng-click="goToRooms()" id="goToRooms" 
+         class="thumbnail noBorder">
       <div class="caption">
         <h2>Rooms</h2>
         <b>Create your hotel rooms</b>
       </div>
       <img src="/assets/images/hotel.jpg">
     </div>
-  </div>
-  <div class="col-md-3">
-    <div class="thumbnail noBorder">
+  </div><!--
+  --><div class="col-md-3 vcenter pointer">
+    <div ng-click="goToRates()" id="goToRates" 
+         class="thumbnail noBorder">
       <div class="caption">
-        <h2>Rooms</h2>
-        <b>Create your hotel rooms</b>
+        <h2>Rates & availability</h2>
+        <b>Set prices across your rooms</b>
       </div>
-      <img src="/assets/images/hotel.jpg">
+      <img src="/assets/images/rates.jpg">
     </div>
-  </div>
-  <div class="col-md-3">
-    <div class="thumbnail noBorder">
+  </div><!--
+  --><div class="col-md-3 vcenter pointer">
+    <div ng-click="goToSupplements()" id="goToSupplements" 
+         class="thumbnail noBorder">
       <div class="caption">
-        <h2>Rooms</h2>
-        <b>Create your hotel rooms</b>
+        <h2>Supplements</h2>
+        <b>Create your Supplements library</b>
       </div>
-      <img src="/assets/images/hotel.jpg">
+      <img src="/assets/images/library.jpg">
     </div>
-  </div>
-  <div class="col-md-3">
-    <div class="thumbnail noBorder">
+  </div><!--
+  --><div class="col-md-3 vcenter pointer">
+    <div ng-click="goToCancellation()" id="goToCancellation" 
+         class="thumbnail noBorder">
       <div class="caption">
-        <h2>Rooms</h2>
-        <b>Create your hotel rooms</b>
+        <h2>Cancellation policies</h2>
+        <b>Create new terms and conditions</b>
       </div>
-      <img src="/assets/images/hotel.jpg">
+      <img src="/assets/images/cancellation.jpg">
     </div>
   </div>
 </div>
