--- a/frontEnd/public/domain/room/rooms.html
+++ b/frontEnd/public/domain/room/rooms.html
@@ -1,6 +1,6 @@
 <h2>Rooms available</h2>
 
-<table ng-controller="RoomsController" class="table table-striped table-hover" >
+<table class="table table-striped table-hover" >
   <thead>
     <tr>
       <th class="col-md-1">Id</th>
