--- a/frontEnd/public/index.html
+++ b/frontEnd/public/index.html
@@ -24,6 +24,7 @@
 		<script src="app.js"></script>
 		<script src="domain/domain.js"></script>
 		<script src="domain/landingPage/landingPageController.js"></script>
+		<script src="domain/landingPage/directives/featuredLink.js"></script>
 		<script src="domain/room/roomsController.js"></script>
 		<script src="domain/room/roomController.js"></script>
 		<script src="domain/room/roomService.js"></script>
