Implementing the behaviours for the link cards in the landing page.

--- a/frontEnd/public/domain/landingPage/directives/featuredLink.html
+++ b/frontEnd/public/domain/landingPage/directives/featuredLink.html
@@ -5,6 +5,6 @@
 	    <h2>{{title}}</h2>
 	    <b>{{description}}</b>
 	  </div>
-	  <img ng-src="{{imagePath}}">
+	  <img ng-src="{{imagePath}}" style="height: 200px;">
 	</div>
 </div>
