--- a/frontEnd/public/domain/landingPage/landingPage.html
+++ b/frontEnd/public/domain/landingPage/landingPage.html
@@ -1,5 +1,5 @@
 <div class="row">
-  
+
   <div featured-link route="/rooms" 
     title="Rooms" 
     description="Create your hotel rooms" 
@@ -21,4 +21,21 @@
     image-path="/assets/images/cancellation.jpg">
   </div>
  
+</div>
+<div class="row">
+  <div section-card route="/tutorial" 
+    title="Tutorials" 
+    description="Consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin
+gravida dolor sit amet lacus accumsan et viverra justo commodo.
+Proin sodales pulvinar tempor. Cum sociis natoque penatibus et
+magnis dis parturient montes, nascetur ridiculus mus.">
+  </div><!--
+  --><div section-card route="/analytics" 
+    title="Analytics" 
+    description="Consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin
+gravida dolor sit amet lacus accumsan et viverra justo commodo.
+Proin sodales pulvinar tempor. Cum sociis natoque penatibus et
+magnis dis parturient montes, nascetur ridiculus mus.">
+  </div>
+
 </div>
