Fixed a really annoying issue where a click was being made on the wrong component.

--- a/frontEnd/public/domain/landingPage/directives/featuredLink.html
+++ b/frontEnd/public/domain/landingPage/directives/featuredLink.html
@@ -1,5 +1,5 @@
 <div class="col-md-3 vcenter pointer">
-	<div ng-click="goTo(route)" 
+	<div id="{{identifier}}" ng-click="goTo(route)"
 	     class="thumbnail noBorder">
 	  <div class="caption">
 	    <h2>{{title}}</h2>
