--- a/frontEnd/public/domain/landingPage/directives/sectionCard.html
+++ b/frontEnd/public/domain/landingPage/directives/sectionCard.html
@@ -1,6 +1,6 @@
 <div class="col-md-6 vcenter">
 	<div class="thumbnail noBorder">
-	  <div ng-click="goTo(route)" class="caption pointer">
+	  <div id="{{identifier}}" ng-click="goTo(route)" class="caption pointer">
 	    <h2>{{title}}</h2>
 	    <b>{{description}}</b>
 	  </div>
