--- a/frontEnd/public/domain/landingPage/landingPage.html
+++ b/frontEnd/public/domain/landingPage/landingPage.html
@@ -1,22 +1,26 @@
 <div class="row">
 
   <div featured-link route="/rooms" 
-    title="Rooms" 
+    title="Rooms"
+    identifier="roomsFeature"
     description="Create your hotel rooms" 
     image-path="/assets/images/hotel.jpg">
   </div><!--
-  --><div featured-link route="/rate" 
-    title="Rates & availability" 
+  --><div featured-link route="/rate"
+    title="Rates & availability"
+    identifier="rateFeature"
     description="Set prices across your rooms" 
     image-path="/assets/images/rates.jpg">
   </div><!--
   --><div featured-link route="/supplement" 
-    title="Supplements" 
+    title="Supplements"
+    identifier="supplementFeature"
     description="Create your Supplements library" 
     image-path="/assets/images/library.jpg">
   </div><!--
   --><div featured-link route="/cancellationPolicy" 
-    title="Cancellation policies" 
+    title="Cancellation policies"
+    identifier="cancellationFeature"
     description="Create new terms and conditions" 
     image-path="/assets/images/cancellation.jpg">
   </div>
@@ -24,14 +28,16 @@
 </div>
 <div class="row">
   <div section-card route="/tutorial" 
-    title="Tutorials" 
+    title="Tutorials"
+    identifier="tutorialsFeature"
     description="Consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin
 gravida dolor sit amet lacus accumsan et viverra justo commodo.
 Proin sodales pulvinar tempor. Cum sociis natoque penatibus et
 magnis dis parturient montes, nascetur ridiculus mus.">
   </div><!--
   --><div section-card route="/analytics" 
-    title="Analytics" 
+    title="Analytics"
+    identifier="analyticsFeature"
     description="Consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin
 gravida dolor sit amet lacus accumsan et viverra justo commodo.
 Proin sodales pulvinar tempor. Cum sociis natoque penatibus et
