Using restangular to make the server calls

--- a/frontEnd/public/index.html
+++ b/frontEnd/public/index.html
@@ -20,6 +20,8 @@
 
 		<script src="bower_components/angular/angular.js"></script>
 		<script src="bower_components/angular-route/angular-route.js"></script>
+		<script src="bower_components/lodash/dist/lodash.underscore.js"></script>
+		<script src="bower_components/restangular/dist/restangular.js"></script>
 
 		<script src="app.js"></script>
 		<script src="domain/domain.js"></script>
