--- a/frontEnd/public/index.html
+++ b/frontEnd/public/index.html
@@ -23,6 +23,7 @@
 		<script src="bower_components/lodash/dist/lodash.underscore.js"></script>
 		<script src="bower_components/restangular/dist/restangular.js"></script>
 
+		<!-- build:js app.min.js -->
 		<script src="app.js"></script>
 		<script src="domain/domain.js"></script>
 		<script src="domain/landingPage/landingPageController.js"></script>
@@ -32,5 +33,6 @@
 		<script src="domain/room/roomController.js"></script>
 		<script src="domain/room/roomsController.js"></script>
 		<script src="domain/room/roomService.js"></script>
+		<!-- /build -->
 	</body>
 </html>
