--- a/frontEnd/public/index.html
+++ b/frontEnd/public/index.html
@@ -18,10 +18,21 @@
 			<div ng-view></div>
 		</div>
 
+		<!-- build:js //ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js -->
 		<script src="bower_components/angular/angular.js"></script>
+		<!-- /build -->
+
+		<!-- build:js //ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.min.js -->
 		<script src="bower_components/angular-route/angular-route.js"></script>
+		<!-- /build -->
+
+		<!-- build:js //cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.underscore.min.js -->
 		<script src="bower_components/lodash/dist/lodash.underscore.js"></script>
+		<!-- /build -->
+
+		<!-- build:js //cdnjs.cloudflare.com/ajax/libs/restangular/1.4.0/restangular.min.js -->
 		<script src="bower_components/restangular/dist/restangular.js"></script>
+		<!-- /build -->
 
 		<!-- build:js app.min.js -->
 		<script src="app.js"></script>
