Being able to serve production with the command: "npm run start-prod" after running "grunt build"

--- a/frontEnd/public/index.html
+++ b/frontEnd/public/index.html
@@ -3,7 +3,10 @@
 <head>
     <title>LateRooms.com</title>
 
+    <!-- build:css //maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css -->
     <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
+	<!-- /build -->
+
     <link href="assets/styles/lateRooms.css" rel="stylesheet">
 </head>
 	<body>
@@ -34,7 +37,7 @@
 		<script src="bower_components/restangular/dist/restangular.js"></script>
 		<!-- /build -->
 
-		<!-- build:js app.min.js -->
+		<!-- build:js js/app.js -->
 		<script src="app.js"></script>
 		<script src="domain/domain.js"></script>
 		<script src="domain/landingPage/landingPageController.js"></script>
