Renamed the Angular project name to ngRooms

--- a/webClient/public/index.html
+++ b/webClient/public/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
-<html ng-app="lateRooms">
+<html ng-app="ngRooms">
 <head>
-    <title>LateRooms.com</title>
+    <title>ngRooms.com</title>
 
     <!-- build:css //maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css -->
     <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
 	<!-- /build -->
 
-    <link href="assets/styles/lateRooms.css" rel="stylesheet">
+    <link href="assets/styles/ngRooms.css" rel="stylesheet">
 </head>
 	<body>
 		<div class="container"> 
