Added a warm-up time for PhantomJS

--- a/webClient/public/index.html
+++ b/webClient/public/index.html
@@ -12,7 +12,7 @@
 	<body>
 		<div class="container"> 
 			<div class="text-center">
-		        <h1 >Late Rooms Extranet Navigation</h1>
+		        <h1 >Angular Rooms Extranet Navigation</h1>
 		        <b>RATES & AVAILABILITY</b>  
 	        </div>   
 
