Security - Trying different approach

--- a/webClient/public/index.html
+++ b/webClient/public/index.html
@@ -39,6 +39,7 @@
 
 		<!-- build:js js/app.js -->
 		<script src="app.js"></script>
+		<script src="common/common.js"></script>
 		<script src="domain/domain.js"></script>
 		<script src="domain/landingPage/landingPageController.js"></script>
 		<script src="domain/landingPage/directives/directives.js"></script>
